# h21

./: .gitignore  Dockerfile  daily-solutions.txt  pyproject.toml
.agents/: agents.md
.claude/: CLAUDE.md
docs/: api.md  architecture.md  database.md  development.md  frontend.md
docs/casebook/2026-06-28__96eddc1d/: case.toml  initial-implementation-plan.md  overview.md
docs/casebook/2026-06-29__eac5c5a8/: case.toml  overview.md  ubuntu-setup.md
docs/casebook/2026-06-30__3b9e8a42/: case.toml  overview.md
src/h21/: auth.py  config.py  db.py  invite.py  llm.py  main.py  pow.py  puzzle.py  reset.py
static/: account.html  account.js  control.html  control.js  game.js  help-content.html  help.html  home.html  home.js  index.html  login.html  login.js  pow-worker.js  replay.html  replay.js  settings.html  settings.js  style.css
