[project]
name = "h21"
version = "0.1.0"
description = "History-themed 21 questions game powered by an LLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.0",
]

[project.scripts]
h21 = "h21.main:cli"
h21-reset = "h21.reset:main"
h21-invite = "h21.invite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/h21"]
